增加 app 的通知设置 (vibe-kanban 60122370)
针对不同类型的消息通知进行开关设置,用户自行决定是否接受通知
