# ai-boilerplate-backend/doc/swagger/app/v1/user_notification_settings.swagger.json
@@ -97,6 +97,42 @@
       },
       "title": "响应-获取用户通知设置"
     },
+    "app.v1.NotificationCategory": {
+      "type": "object",
+      "properties": {
+        "key": {
+          "type": "string",
+          "title": "唯一标识"
+        },
+        "title": {
+          "type": "string",
+          "title": "标题"
+        },
+        "description": {
+          "type": "string",
+          "title": "描述"
+        },
+        "enabled": {
+          "type": "boolean",
+          "title": "是否开启"
+        }
+      },
+      "title": "通知类别"
+    },
+    "app.v1.NotificationPreference": {
+      "type": "object",
+      "properties": {
+        "key": {
+          "type": "string",
+          "title": "唯一标识"
+        },
+        "enabled": {
+          "type": "boolean",
+          "title": "是否开启"
+        }
+      },
+      "title": "通知偏好"
+    },
     "app.v1.NotificationSettingsInfo": {
       "type": "object",
       "properties": {
@@ -108,17 +144,13 @@
           "type": "string",
           "title": "用户ID"
         },
-        "systemNotification": {
-          "type": "boolean",
-          "title": "系统通知"
-        },
-        "activityNotification": {
-          "type": "boolean",
-          "title": "活动通知"
-        },
-        "orderNotification": {
-          "type": "boolean",
-          "title": "订单通知"
+        "categories": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/app.v1.NotificationCategory"
+          },
+          "title": "通知类别"
         },
         "dndStartTime": {
           "type": "string",
@@ -146,17 +178,13 @@
     "app.v1.UpdateNotificationSettingsReq": {
       "type": "object",
       "properties": {
-        "systemNotification": {
-          "type": "boolean",
-          "title": "系统通知"
-        },
-        "activityNotification": {
-          "type": "boolean",
-          "title": "活动通知"
-        },
-        "orderNotification": {
-          "type": "boolean",
-          "title": "订单通知"
+        "preferences": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/app.v1.NotificationPreference"
+          },
+          "title": "通知偏好"
         },
         "dndStartTime": {
           "type": "string",
